--- a/theme.css
+++ b/theme.css
@@ -10,7 +10,8 @@ body {
 	--slider-thumb-radius: 0px;
 }
 
-.workspace-tab-header.is-active::before, .workspace-tab-header.is-active::after {
+.workspace-tab-header.is-active::before,
+.workspace-tab-header.is-active::after {
 	display: none;
 }
 
@@ -31,4 +32,48 @@ svg * {
 
 .menu-separator {
 	margin: var(--size-2-1) calc(var(--size-2-1) * -1);
+}
+
+/* Vault Specific Styles */
+/* Sidebar */
+
+/*Riviera Variables*/
+
+.theme-dark,
+.theme-light {
+	--riviera-bg: rgba(207, 222, 194, 1);
+	--riviera-color: rgba(105, 128, 85, 1);
+	--riviera-color-strong: rgb(33, 52, 15, 1);
+}
+
+body {
+	--ribbon-background: var(--riviera-bg);
+	/*Notes Titles*/
+	--inline-title-size: 1.8em;
+	--inline-title-color: var(--riviera-color);
+	/*Headings*/
+	--h1-size: 1.5em;
+	--h2-size: 1.4em;
+	--h3-size: 1.3em;
+	--h4-size: 1.2em;
+	--h5-size: 1.1em;
+	--h6-size: 1em;
+	/*Links*/
+	--link-color: var(--riviera-color);
+	--link-decoration: none;
+	/*File Navigator*/
+	--nav-item-background-hover: var(--riviera-bg);
+	--nav-item-background-active: var(--riviera-bg);
+	/*Icons*/
+	--icon-color: var(--riviera-color-strong);
+	/*tabs*/
+	--tab-background-active: var(--riviera-bg);
+	--tab-container-background: var(--riviera-bg);
+}
+
+/*.metadata-properties .svg-icon {
+	color: rgba(105, 128, 85, 1);
+}*/
+.inline-title {
+	margin-bottom: 2em;
 }
